--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-		<title>Identity by HTML5 UP</title>
+		<title>Shubhangi Singh</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt=""></span>
+							<span class="avatar"><img src="https://raw.githubusercontent.com/shubhangisingh/shubhangisingh.github.io/master/images/avatar.jpg" alt=""></span>
 							<h1>Shubhangi Singh</h1>
 							<p>Web Engineer</p>
 						</header>
