removing unwanted js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://raw.githubusercontent.com/shubhangisingh/shubhangisingh.github.io/master/images/avatar.jpg" alt=""></span>
+							<span class="avatar"><img src="images/avatar.jpg" alt=""></span>
 							<h1>Shubhangi Singh</h1>
 							<p>Web Engineer</p>
 						</header>
@@ -76,7 +76,7 @@
 
 		<!-- Scripts -->
 			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-			<script src="index.html.0.js"></script>
+		
 
 	
 </body></html>
