adding missing file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
 		<!-- Scripts -->
 			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-		
+					<script src="index.html.0.js"></script>
+
 
 	
 </body></html>
