--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 					<hr>
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-github">Github</a></li>
+								<li><a href="https://github.com/shubhangisingh" class="fa-github">Github</a></li>
 								<li><a href="#" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="#" class="fa-wordpress">Wordpress</a></li>
+								<li><a href="https://codeshutters.wordpress.com/" class="fa-wordpress">Wordpress</a></li>
 							</ul>
 						</footer>
 					</section>
