--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				
 						<hr>
 						<h2>Send ME A Query</h2>
-						<form method="post" action="#">
+					
+						<form  action="mailto:shubhangi.mca09@gmail.com">
 							<div class="field">
 								<input type="text" name="name" id="name" placeholder="Name">
 							</div>
