--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<!--	<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>-->
 							<!--</div>-->
 							<ul class="actions">
-								<li><a href="#" class="button">Get Started</a></li>
+							  <li><input type="submit" value="Submit" class="button"></li>
 							</ul>
 						</form>
 					<hr>
