added stack overflow

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 					<hr>
 						<footer>
 							<ul class="icons">
-								<li><a href="https://github.com/shubhangisingh" class="fa-github">Github</a></li>
-								<li><a href="#" class="fa-linkedin">LinkedIn</a></li>
-								<li><a href="https://codeshutters.wordpress.com/" class="fa-wordpress">Wordpress</a></li>
+								<li><a href="https://github.com/shubhangisingh" target="_blank" class="fa-github">Github</a></li>
+								<li><a href="Public Profilehttps://in.linkedin.com/in/shubhangi-singh-435433106" target="_blank" class="fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://codeshutters.wordpress.com/" target="_blank" class="fa-wordpress">Wordpress</a></li>
+								<li><a href="http://meta.stackoverflow.com/users/6412498/shubhangi-singh?tab=topactivity" target="_blank" class="fa-stack-overflow">Stack Overflow</a></li>
 							</ul>
 						</footer>
 					</section>
