--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/shubhangisingh" target="_blank" class="fa-github">Github</a></li>
-								<li><a href="Public Profilehttps://in.linkedin.com/in/shubhangi-singh-435433106" target="_blank" class="fa-linkedin">LinkedIn</a></li>
+								<li><a href="www.linkedin.com/in/shubhangisinghmca09" target="_blank" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://codeshutters.wordpress.com/" target="_blank" class="fa-wordpress">Wordpress</a></li>
 								<li><a href="http://meta.stackoverflow.com/users/6412498/shubhangi-singh?tab=topactivity" target="_blank" class="fa-stack-overflow">Stack Overflow</a></li>
 							</ul>
