--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<div class="field">
 								<div class="select-wrapper">
 									<select name="department" id="department">
-										<option value="">Department</option>
+										<option value="">Counsult</option>
 										<option value="sales">Sales</option>
 										<option value="tech">Tech Support</option>
 										<option value="null">/dev/null</option>
