--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
 							<p>Web Engineer</p>
 						</header>
 				
-						<hr>
-						<h2>Send ME A Query</h2>
+					<!--	<hr>-->
+					<!--	<h2>Send ME A Query</h2>-->
 					
-						<form  action="mailto:shubhangi.mca09@gmail.com">
-							<div class="field">
-								<input type="text" name="name" id="name" placeholder="Name">
-							</div>
-							<div class="field">
-								<input type="email" name="email" id="email" placeholder="Email">
-							</div>
-							<div class="field">
-								<div class="select-wrapper">
-									<select name="department" id="department">
-										<option value="">Counsult</option>
-										<option value="sales">Sales</option>
-										<option value="tech">Tech Support</option>
-										<option value="null">/dev/null</option>
-									</select>
-								</div>
-							</div>
-							<div class="field">
-								<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-							</div>
+					<!--	<form  action="mailto:shubhangi.mca09@gmail.com">-->
+					<!--		<div class="field">-->
+					<!--			<input type="text" name="name" id="name" placeholder="Name">-->
+					<!--		</div>-->
+					<!--		<div class="field">-->
+					<!--			<input type="email" name="email" id="email" placeholder="Email">-->
+					<!--		</div>-->
+					<!--		<div class="field">-->
+					<!--			<div class="select-wrapper">-->
+					<!--				<select name="department" id="department">-->
+					<!--					<option value="">Counsult</option>-->
+					<!--					<option value="sales">Sales</option>-->
+					<!--					<option value="tech">Tech Support</option>-->
+					<!--					<option value="null">/dev/null</option>-->
+					<!--				</select>-->
+					<!--			</div>-->
+					<!--		</div>-->
+					<!--		<div class="field">-->
+					<!--			<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>-->
+					<!--		</div>-->
 							<!--<div class="field">-->
 							<!--	<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>-->
 							<!--</div>-->
@@ -52,11 +52,11 @@
 							<!--	<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>-->
 							<!--	<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>-->
 							<!--</div>-->
-							<ul class="actions">
-							  <li><input type="submit" value="Submit" class="button"></li>
-							</ul>
-						</form>
-					<hr>
+					<!--		<ul class="actions">-->
+					<!--		  <li><input type="submit" value="Submit" class="button"></li>-->
+					<!--		</ul>-->
+					<!--	</form>-->
+					<!--<hr>-->
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/shubhangisingh" target="_blank" class="fa-github">Github</a></li>
