--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<li><a href="https://codeshutters.wordpress.com/" target="_blank" class="fa-wordpress">Wordpress</a></li>
 								<!--<li><a href="http://meta.stackoverflow.com/users/6412498/shubhangi-singh?tab=topactivity" target="_blank" class="fa-stack-overflow">Stack Overflow</a></li>-->
 							</ul>
-						     <a href="	https://raw.githubusercontent.com/shubhangisingh/shubhangisingh.github.io/master/assets/resume.docx" target="_blank" class = 'button'>Download Resume</a>
+						 <!--    <a href="	https://raw.githubusercontent.com/shubhangisingh/shubhangisingh.github.io/master/assets/resume.docx" target="_blank" class = 'button'>Download Resume</a>-->
 						</footer>
 					</section>
 					
