--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 								<li><a href="https://github.com/shubhangisingh" target="_blank" class="fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/shubhangisinghmca09" target="_blank" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://codeshutters.wordpress.com/" target="_blank" class="fa-wordpress">Wordpress</a></li>
+								<li><a href="https://codeshutters.hashnode.dev/" target="_blank" class="fa-hashnode">Hashnode</a></li>
 								<!--<li><a href="http://meta.stackoverflow.com/users/6412498/shubhangi-singh?tab=topactivity" target="_blank" class="fa-stack-overflow">Stack Overflow</a></li>-->
 							</ul>
 						 <!--    <a href="	https://raw.githubusercontent.com/shubhangisingh/shubhangisingh.github.io/master/assets/resume.docx" target="_blank" class = 'button'>Download Resume</a>-->
