--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -19,7 +21,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt=""></span>
 							<h1>Shubhangi Singh</h1>
-							<p>Web Engineer</p>
+							<p>Full Stack Developer || AWS Certified || DevOps Enthusiast</p>
 						</header>
 				
 					<!--	<hr>-->
